GNOME Bugzilla – Bug 722526
glib/deprecated/gthread.h error on FreeBSD
Last modified: 2014-01-20 12:35:31 UTC
Created attachment 266644 [details] [review] #include <sys/types.h> before #include <pthread.h> Using this header cause error on FreeBSD because clockid_t cannot be found. #include <sys/types.h> before #include <pthread.h> can fix this problem.
This is clearly a bug in the freebsd headers. sus says: Inclusion of the <pthread.h> header shall make symbols defined in the headers <sched.h> and <time.h> visible. I'll commit the workaround anyway.
#include <time.h> still does not work on FreeBSD. #include <sys/types.h> works.
even more broken :(